--- a/style.css
+++ b/style.css
@@ -1,32 +1,29 @@
-#score{
-    margin-left: 5px;
-    font-size: 20px;
-    font-family: 'Oswald', sans-serif;
-}
-#timer{
-    float: right;
-    margin-right: 5px;
-    font-size: 20px;
-    font-family: 'Oswald', sans-serif;
-}
 body{
-    background-color: aquamarine;
+    background-color: maroon;
 }
 h1{
-    background-color: cornsilk;
-    color: rgb(38,0,255);
-    font-family: 'Oswald', sans-serif;
+    color:navy;
+    background-color: red;
 }
+
 #show_sketch{
     float: right;
 }
-p{
-    font-family: 'Oswald', sans-serif;
-    font-size: 25px;
-    color: royalblue;
+
+canvas{
+    border: 5px solid royalblue;
+    border-radius: 20px;
+    animation-name: example;
+    animation-duration: 4s;
+    margin-top: 50px;
+    animation-iteration-count: infinite;
 }
-#sketch_to_be_drawn{
-    font-family: 'Oswald', sans-serif;
+@keyframes example{
+    from {box-shadow: 1px 1px 38px white;}
+    to {box-shadow: 1px 1px 38px blue;}
+}
+
+p{
+    padding-top: 10px;
     font-size: 25px;
-    color: red;
 }
