--- a/style.css
+++ b/style.css
@@ -1,29 +1,49 @@
 body{
-    background-color: maroon;
-}
-h1{
-    color:navy;
-    background-color: red;
-}
-
-#show_sketch{
+    background-color: greenyellow;
+  }
+  
+  h1
+  {
+    font-family: 'Special Elite', fantasy;
+    color:rgb(38, 0, 255);
+    background-color: cornsilk;
+  }
+  
+  #show_sketch
+  {
+    float:right;
+  }
+  
+  #timer{
     float: right;
-}
-
-canvas{
-    border: 5px solid royalblue;
-    border-radius: 20px;
-    animation-name: example;
-    animation-duration: 4s;
-    margin-top: 50px;
-    animation-iteration-count: infinite;
-}
-@keyframes example{
-    from {box-shadow: 1px 1px 38px white;}
-    to {box-shadow: 1px 1px 38px blue;}
-}
-
-p{
-    padding-top: 10px;
-    font-size: 25px;
-}
+  }
+  
+  #sketch_to_be_drawn{
+    color: red;
+  }
+  
+  canvas 
+    {
+      border:2px solid white;
+      border-radius:20px;
+      margin-top:135px;
+      box-shadow:5px 5px 5px grey;
+      box-shadow: 1px 1px 38px #ffffff;
+      animation-name: example;
+      animation-duration: 4s;
+      animation-iteration-count: infinite;
+  }
+  @keyframes example {
+  
+    from {box-shadow: 1px 1px 38px red;}
+    to {box-shadow: 1px 1px 38px green;}
+  
+  }
+  
+  
+  p, span
+  {
+      padding-top:10px;
+      font-family: 'Special Elite', fantasy;
+      font-size:25px;
+  }
